--- a/b.yml
+++ b/b.yml
@@ -1,42 +1,42 @@
-name: CI with SonarQube
+name: SonarQube-Integration
 
 on:
   push:
     branches:
-      - main
-      - develop
+      - dev
   pull_request:
     branches:
-      - main
-      - develop
+      - dev
+    types: [opened, synchronize, reopened]
 
 jobs:
-  sonar-scan:
+  SonarQube:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Step 1: Checkout the code
+        uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Required for SonarQube to analyze Git history
+          fetch-depth: 0
 
-      # Step 2: Install SonarQube Scanner
-      - name: Install SonarQube Scanner
+      - name: Step 2: Set up JDK 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Step 3: Install SonarQube Scanner
         run: |
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-6.2.1.4610-linux.zip
-          unzip sonar-scanner-cli-6.2.1.4610-linux.zip
-          export PATH=$PATH:$PWD/sonar-scanner-6.2.1.4610-linux/bin
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.6.2.2472-linux.zip
+          unzip sonar-scanner-cli-4.6.2.2472-linux.zip
+          sudo mv sonar-scanner-4.6.2.2472-linux /opt/sonar-scanner
+          echo "SONAR_SCANNER_HOME=/opt/sonar-scanner" >> $GITHUB_ENV
+          echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
 
-      # Step 3: Run SonarQube Scan
-      - name: SonarQube Scan
+      - name: Step 4: Run SonarQube Scan
+        run: sonar-scanner
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: |
-          sonar-scanner \
-            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
-            -Dsonar.host.url=$SONAR_HOST_URL \
-            -Dsonar.login=$SONAR_TOKEN \
-            -Dsonar.sources=. \
-            -Dsonar.exclusions=**/*.md,**/*.txt  # Exclude non-code files
+          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
+          SONAR_SCANNER_OPTS: "-Xmx1024m"
