--- a/b.yml
+++ b/b.yml
@@ -1,3 +1,33 @@
+name: SonarQube-Integration
 
+on:
+  push:
+    branches:
+      - dev
+  pull_request:
+    branches:
+      - dev
+    types: [opened, synchronize, reopened]
 
-      
+jobs:
+  SonarQube:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Step 1: Checkout code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Step 2: Set up Java 17
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Step 3: Build and Run SonarQube Analysis
+        run: |
+          mvn clean install sonar:sonar \
+            -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }} \
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
